make-a-wish-salesforce/src/objects/ErrorMessage__e.object
<CustomObject>
    <fields>
        <fullName>Apex_Class__c</fullName>
        <description>This field will store the Apex class name which cause the exception</description>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Message__c</fullName>
        <description>This field will store the developer Message.</description>
        <label>Developer Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>This field holds the Message of the exception</description>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <description>This field store the Method which cause the Exception</description>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <description>This field holds the record which causes the exception.</description>
        <label>Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <description>This field will hold the Stack Trace of the Log.</description>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This field specifies the type of the Log.</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ErrorMessage</label>
    <pluralLabel>ErrorMessages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>